[gd_scene load_steps=2 format=3 uid="uid://bya7ly2k0oati"]

[ext_resource type="Script" uid="uid://txvoo1pdgwh7" path="res://exam_ui.gd" id="1_k1dmc"]

[node name="ExamUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_k1dmc")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0

[node name="TextIntrebare" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -65.0
offset_top = 288.0
offset_right = 65.0
offset_bottom = 311.0
grow_horizontal = 2
text = "Intrebare de test"

[node name="Button" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -4.0
offset_top = -4.0
offset_right = 4.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button2" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -4.0
offset_top = 34.0
offset_right = 4.0
offset_bottom = 42.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button3" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -4.0
offset_top = 80.0
offset_right = 4.0
offset_bottom = 88.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button4" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -4.0
offset_top = 123.0
offset_right = 4.0
offset_bottom = 131.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="pressed" from="Panel/Button" to="." method="_on_ButonA_pressed"]
[connection signal="pressed" from="Panel/Button2" to="." method="_on_ButonB_pressed"]
[connection signal="pressed" from="Panel/Button3" to="." method="_on_ButonC_pressed"]
[connection signal="pressed" from="Panel/Button4" to="." method="_on_ButonD_pressed"]
